--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-shared-group-preferences": "^1.1.23"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
