--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
   "name": "rnwidget",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-shared-group-preferences": "^1.1.23"
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-really-awesome-button": "^2.0.4",
+    "react-native-shared-group-preferences": "^1.1.23",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.3",
+    "@types/react": "^18.2.20",
+    "@types/react-native-shared-group-preferences": "^1.1.1",
+    "typescript": "^5.1.6",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.19.0",
+    "prettier": "^2.4.1"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
