--- a/package.json
+++ b/package.json
@@ -4,33 +4,42 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "prebuild": "expo prebuild",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "echo \"Warning: no test specified\"",
+    "up:bun": "bun x npm-check-updates --interactive --format group --doctor --doctorInstall=\"bun install\" --doctorTest=\"bun run test\""
   },
   "dependencies": {
     "expo": "~49.0.7",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "^2.4.0",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-really-awesome-button": "^2.0.4",
+    "react-native-root-toast": "^3.4.1",
     "react-native-shared-group-preferences": "^1.1.23",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-widget-bridge": "^0.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.22.10",
     "@tsconfig/react-native": "^3.0.2",
-    "@types/jest": "^29.5.3",
     "@types/react": "^18.2.20",
     "@types/react-native-shared-group-preferences": "^1.1.1",
-    "typescript": "^5.1.6",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "eslint": "^8.19.0",
-    "prettier": "^2.4.1"
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.0.2",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "preset": "react-native"
