--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-really-awesome-button": "^2.0.4",
     "react-native-root-toast": "^3.4.1",
     "react-native-shared-group-preferences": "^1.1.23",
-    "react-native-widget-bridge": "^0.1.3"
+    "react-native-widget-bridge": "^0.1.3",
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
@@ -40,8 +41,5 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.0.2",
     "typescript": "^5.1.6"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
