--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
+    "fmt": "prettier --write .",
     "test": "echo \"Warning: no test specified\"",
     "up:bun": "bun x npm-check-updates --interactive --format group --doctor --doctorInstall=\"bun install\" --doctorTest=\"bun run test\""
   },
